@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Tue Nov 18 11:42 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Tweaked select so it now passes 5 parameters in the normal way.
+
 Thu Nov 18 15:00 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Some more updates to config scripts made in conjunction with
